# simplinho

./: .gitignore  CMakeLists.txt  LICENSE  README.md  simplex_modeling_api_demo.ipynb
bindings/: simplex_bindings.cpp
include/simplex/: aux.h  degeneracy.h  presolver.h  pricer.h  simplex.h  simplex_aux.h  simplex_dual.h  simplex_lu.h  simplex_primal.h  simplex_types.h
src/: README.md
tests/: simplex_vs_pulp_highs.ipynb  testing.py
